@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 26-11-2005 added: two new virtual directories for use in bookmarks: $MUSICPLAYLISTS, $VIDEOPLAYLISTS.
+ - 26-11-2005 fixed: thumbs and databases should work again! (you may need to regenerate thumbs in my pictures)
  - 26-11-2005 fixed: httpapi GetDirectory command with local non-directory or local empty directory parameter
  - 25-11-2005 added: <loop> tag to MultiImage control.
  - 25-11-2005 fixed: Textures outside of Textures.xpr were failing to load.
